[package]
name = "multi_iter"
version = "0.1.6"
authors = ["mklifo <mklifo@proton.me>"]
edition = "2021"

repository = "https://github.com/mklifo/multi_iter"
readme = "README.md"
categories = ["algorithms", "rust-patterns"]
keywords = ["iterator", "next", "peek", "no_alloc", "no_std"]

license = "MIT"
description = "Iterator for acting on multiple elements at a time"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["std"]

std = []

# Toggle for nightly support
unstable = []
